# PyMash

./: main.py
pymash/: __init__.py  pyproject.toml
