[project]
name = "pymash_darkoutcast"
version = "0.0.1"
authors = [
  { name="DarkOutcast6", email="amfutoran@gmail.com" },
]
description = "A powerful package to build might websites, all from your comfy couch, Python!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"